syntax = "proto3";
package com.example.grpc;

message HelloRequest{
  string name = 1;
  string surName = 2;

}

message HelloResponse{
  string greeting = 1;

}

service GreetingService{
  rpc greeting(HelloRequest) returns (HelloResponse);
  rpc greetingAgain(HelloRequest) returns (HelloResponse);
}